--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <tr>
                 <td>Projection</td>
                 <td>
-                    <select id="projection">
+                    <select id="projection" onchange = "window.updateProjection()">
                         <option value="">--Please choose an option--</option>
-                        <option value="perspective">perspective</option>
+                        <option value="perspective" >perspective</option>
                         <option value="orthographic">orthographic</option>
                     </select></td>
             </tr>
